--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -38,7 +38,7 @@ jobs:
       # 5. Run pytest with HTML + Allure outputs
       - name: Run tests with pytest
         run: |
-          pytest src/seleniumProject/tests \
+          pytest src/seleniumProject/tests::test_login_module_hybrid.py \
             --html=reports/report.html --self-contained-html \
             --alluredir=reports/allure-results \
             --junitxml=reports/junit-report.xml
